# adk-burger-whatsapp-llm

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
config/: catalog.json
src/hamburgueria_bot/adk/: orchestrator.py
src/hamburgueria_bot/adk/agents/: base.py  cardapio.py  carrinho.py  endereco.py  llm_agent.py  pagamento.py  saudacao.py
src/hamburgueria_bot/adk/runtime/: toolkit.py
src/hamburgueria_bot/adk/tools/: cart_tools.py
src/hamburgueria_bot/api/: app.py
src/hamburgueria_bot/connectors/whatsapp/: cloud_api_adapter.py
src/hamburgueria_bot/core/: catalog.py  coalesce.py  context.py  db.py  di.py  guardrails.py  llm_client.py  logging.py  prompting.py  settings.py
src/hamburgueria_bot/domain/services/: cart_service.py  menu_service.py
src/hamburgueria_bot/ports/: interfaces.py
src/hamburgueria_bot/repo/: models.py  repo.py
src/hamburgueria_bot/tasks/: outbox_dispatcher.py
